# gbpy

./: .gitignore  README.md  pyproject.toml  setup.py
resources/: gba-manual.md
src/core/: cartridge.c  cartridge.h  emulator.c  emulator.h  input.c  input.h  module.c  state.c  state.h  timer.c  timer.h  types.h
src/core/audio/: apu.c  apu.h  gba_apu.c  gba_apu.h
src/core/cpu/: arm7tdmi.c  arm7tdmi.h  sm83.c  sm83.h
src/core/memory/: gba_memory.c  gba_memory.h  mbc.c  mbc.h  mmu.c  mmu.h
src/core/video/: gb_ppu.c  gb_ppu.h  gba_ppu.c  gba_ppu.h
src/gbpy/: __init__.py  gui.py  main.py
tests/: test_cartridge.py  test_cpu.py  test_frame.py  test_input.py  test_roms.py  test_state.py
